[package]
name = "beekeeper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
chrono = "0.4.13"
fern = "0.6.0"

hyper = "0.14.7"
futures = {version = "0.3", features = ["executor"]}
tokio = {version = "1.2", features = ["full"] }
# tokio-compat-02 = "0.2"
# async-std = { version = "1.8.0", features = ["attributes"] }
tide = {version = "0.16.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.46"

uuid = {version = "0.8.1", features = ["serde", "v4"]}
sqlx = {version = "0.5.2", features = ["mysql", "bigdecimal", "chrono", "runtime-async-std-rustls"]}

base64 = "0.13"
flate2 = "1.0"
url = "2.2.1"
tar = "0.4"

futures-util = { version = "0.3.15", features = ["io"]}
http-client = { version = "6.1.0", default-features = false, features = ["h1_client", "rustls"]}
http-types = { version = "2.11.0", default-features = false, features = ["fs"] }

# docker client
# shiplift = {version = "0.7"}
# bollard = "0.10.1"

[features]
default = ["runtime-std"]
runtime-std = []
runtime-tokio = []